[package]
name = "url_image_hasher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
futures = "0.3.25"
image = { version = ">=0.21,<0.24" }
img_hash = "3.2.0"
rayon = "1.5.3"
clap = { version = "4.0.23", features = ["derive"] }
reqwest = { version = "0.11.12", features=["blocking"] }
